2007-04-14 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/auto-place-attribs.scm:
	    - Added support for net and bus attributes.
	    - In adjust_pos_to_avoid_collision, don't loop again if 
	    the offset is changed, and fixed x_offset instead of y_offset 
	    bug.
	* lib/system-gschemrc.in: 
	    - Added default positions for device and netname attributes 
	  in default-position-of-text-attributes,

	* src/g_hook.c: Fixed custom_world_get_single_object_bounds,
	  and custom_world_get_object_list_bounds, so they don't traverse
	  the whole object list.
	
	* include/globals.h, include/prototype.h, src/g_register.c, 
	  src/globals.c, src/o_complex.c, src/x_event.c:
	  Added complex place list changed hook.
	  This is the list used when placing new components.
	
2007-04-07 Carlos Nieves Onega <cnieves@iespana.es>

	* src/x_dialog.c: Redraw the schematic after changing the snap size.
	  Thanks to Peter Clifton for reporting the bug. Closes bug #1657496.

2007-04-06 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in, scheme/auto-place-attribs.scm:
	  Improved the auto placing: if the attribute overlaps with pins
	  (including pinnumbers), or the pin connection direction where 
	  a net is supposed to be drawn, then the attributes are moved 
	  automatically.

2007-03-31 Peter Clifton <pcjc2@cam.ac.uk>

	* src/x_dialog.c: Fixed confirm save on page-close dialogs to correctly
	  cancel, rather than assert if the dialog is closed with the ESCAPE
	  key, or with the window-manager's destroy button.

2007-02-25 Peter Clifton <pcjc2@cam.ac.uk>

	* src/o_arc.c, src/o_box.c, src/o_circle.c, src/o_line.c,
	  src/x_multiattrib.c, src/x_pagesel.c, src/x_preview.c,
	  src/x_window.c: Replaced loosely typed function pointers such as
	  void (*draw_func)(); with more strongly typed pointers.

2007-02-24 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes to date from noscreen branch.

	2007-02-24 Peter Clifton <pcjc2@cam.ac.uk>
