@@ -6,6 +6,9 @@
 	    the offset is changed, and fixed x_offset instead of y_offset 
 	    bug.
 	* lib/system-gschemrc.in: 
+	    - Added complex list changed hook to the hooks to be enabled
+	      if the user wants attribute autoplacement.
+	
 	    - Added default positions for device and netname attributes 
 	  in default-position-of-text-attributes,
 
